# imgproc-graphics

./: .gitignore  avgfilter.m  bwstripe.m  bwsubsampling.m  fourier.m  interpolation.m  rainbow_continuous.m  rainbow_discrete.m
hough-pres/: Jannik Text.txt  Makefile  meta.yml  pres.md
hough-pres/Abgabe/: Link zum Video.txt
hough-pres/imgs/: GeradeTransf.drawio  Hesseche.drawio  hough.drawio
houghdemo/: CMakeLists.txt  main.cpp
